# ethercat-xenomai

./: CMakeLists.txt
src/: .ex03.c.swp  .main.c.swp  CMakeLists.txt  main.c  servo.c
